# word_tracker_thread_learn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  out.txt
include/: ThreadSafeWordQueue.h  WordCounter.h  WordTracker.h
media/: word_tracker_ascii_art.txt
scripts/: run.sh  setup.sh  tests_run.sh
src/: ThreadSafeWordQueue.cpp  WordCounter.cpp  WordTracker.cpp  main.cpp  main.h
tests/: CMakeLists.txt  simple_tests.cpp  tests.cpp
